Revert "added base.html & align all stuff properly with the use of block's -AND- fixed some bugs"
This reverts commit 9e9a69621bbf85a0a3b6824a625246ca00e0cb39.

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -16,15 +16,4 @@ height: 100%;
 }
 }
 
-
-#top-alert {
-    text-align: center;
-    font-size: large;
-    margin-bottom: 0;
-    border-radius: 0;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 99999;
-  }
 /* ------------------------------------------- */
